added get user info by id endpoint
