# api_gateway/docs/swagger.yaml
@@ -279,6 +279,22 @@ paths:
       summary: Поиск пользователей по username
       tags:
       - search
+  /search/profiles_by_id:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: id пользователя
+        in: query
+        name: username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses: {}
+      summary: Поиск пользователей по id
+      tags:
+      - search
   /ws:
     get:
       parameters:
